<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/results"
        style="@style/Results"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1234" />

    <TextView
        android:id="@+id/number_dot"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_dot"
        app:layout_constraintBottom_toBottomOf="@+id/number_0"
        app:layout_constraintLeft_toLeftOf="@+id/number_5"
        app:layout_constraintRight_toRightOf="@+id/number_5"
        app:layout_constraintTop_toTopOf="@+id/number_0" />

    <TextView
        android:id="@+id/number_0"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/number_1"
        app:layout_constraintRight_toRightOf="@+id/number_1"
        app:layout_constraintTop_toBottomOf="@+id/number_1" />

    <TextView
        android:id="@+id/number_1"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_1"
        app:layout_constraintBottom_toTopOf="@+id/number_0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/number_4"
        app:layout_constraintRight_toRightOf="@+id/number_4"
        app:layout_constraintTop_toBottomOf="@+id/number_4" />

    <TextView
        android:id="@+id/number_2"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_2"
        app:layout_constraintBottom_toBottomOf="@+id/number_1"
        app:layout_constraintLeft_toLeftOf="@+id/number_5"
        app:layout_constraintRight_toRightOf="@+id/number_5"
        app:layout_constraintTop_toTopOf="@+id/number_1" />

    <TextView
        android:id="@+id/number_3"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_3"
        app:layout_constraintBottom_toBottomOf="@+id/number_1"
        app:layout_constraintLeft_toLeftOf="@+id/number_6"
        app:layout_constraintRight_toRightOf="@+id/number_6"
        app:layout_constraintTop_toTopOf="@+id/number_1" />

    <TextView
        android:id="@+id/number_4"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_4"
        app:layout_constraintBottom_toTopOf="@+id/number_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/number_7"
        app:layout_constraintRight_toRightOf="@+id/number_7"
        app:layout_constraintTop_toBottomOf="@+id/number_7" />

    <TextView
        android:id="@+id/number_5"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_5"
        app:layout_constraintBottom_toBottomOf="@+id/number_4"
        app:layout_constraintLeft_toLeftOf="@+id/number_8"
        app:layout_constraintRight_toRightOf="@+id/number_8"
        app:layout_constraintTop_toTopOf="@+id/number_4" />

    <TextView
        android:id="@+id/number_6"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_6"
        app:layout_constraintBottom_toBottomOf="@+id/number_4"
        app:layout_constraintLeft_toLeftOf="@+id/number_9"
        app:layout_constraintRight_toRightOf="@+id/number_9"
        app:layout_constraintTop_toTopOf="@+id/number_4" />

    <TextView
        android:id="@+id/number_7"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_7"
        app:layout_constraintBottom_toTopOf="@+id/number_4"
        app:layout_constraintEnd_toStartOf="@+id/number_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results" />

    <TextView
        android:id="@+id/number_8"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_8"
        app:layout_constraintBottom_toBottomOf="@+id/number_7"
        app:layout_constraintEnd_toStartOf="@+id/number_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_7"
        app:layout_constraintTop_toBottomOf="@+id/results" />

    <TextView
        android:id="@+id/number_9"
        style="@style/Digit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/digit_9"
        app:layout_constraintBottom_toBottomOf="@+id/number_7"
        app:layout_constraintEnd_toStartOf="@+id/operator_clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_8"
        app:layout_constraintTop_toBottomOf="@+id/results" />

    <TextView
        android:id="@+id/operator_clear"
        style="@style/Operator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/operator_clear"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/operator_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_9"
        app:layout_constraintTop_toBottomOf="@+id/results" />

    <TextView
        android:id="@+id/operator_divide"
        style="@style/Operator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/operator_division"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/operator_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/operator_clear"
        app:layout_constraintRight_toRightOf="@+id/operator_clear"
        app:layout_constraintTop_toBottomOf="@+id/operator_clear" />

    <TextView
        android:id="@+id/operator_equals"
        style="@style/Operator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/operator_equals"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/number_0"
        app:layout_constraintLeft_toLeftOf="@+id/number_6"
        app:layout_constraintRight_toRightOf="@+id/number_6"
        app:layout_constraintTop_toTopOf="@+id/number_0" />

    <TextView
        android:id="@+id/operator_multiply"
        style="@style/Operator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/operator_multiply"
        app:layout_constraintBottom_toTopOf="@+id/operator_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/operator_clear"
        app:layout_constraintRight_toRightOf="@+id/operator_clear"
        app:layout_constraintTop_toBottomOf="@+id/operator_divide" />

    <TextView
        android:id="@+id/operator_minus"
        style="@style/Operator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/operator_minus"
        app:layout_constraintBottom_toTopOf="@+id/operator_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/operator_clear"
        app:layout_constraintRight_toRightOf="@+id/operator_clear"
        app:layout_constraintTop_toBottomOf="@+id/operator_multiply" />

    <TextView
        android:id="@+id/operator_plus"
        style="@style/Operator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/operator_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/operator_clear"
        app:layout_constraintRight_toRightOf="@+id/operator_clear"
        app:layout_constraintTop_toBottomOf="@+id/operator_minus" />

    <View
        android:id="@+id/right_line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/operator_clear"
        app:layout_constraintTop_toBottomOf="@+id/results" />
</android.support.constraint.ConstraintLayout>